Made some adjustment in the html and stylesheet files

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- Navbar Secton -->
-    <nav class="navbar container navbar-expand-lg bg-body-white px-3 pt-4">
+    <nav class="navbar container navbar-expand-lg bg-body-white px-3 pt-3">
         <img src="Images/image 17 (1).png" alt="">
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
             aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -249,7 +249,7 @@
     </section>
 
     <!-- Footer Section -->
-    <footer class="container px-5">
+    <footer class="container">
         <div class="row pt-5">
             <div class="col-sm-12 col-md-6 col-lg-8 pt-2">
                 <img src="Images/image 17 (1).png" class="Img17" alt="">
