--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- Navbar Of First Section In Blog Page -->
-    <nav class="navbar container navbar-expand-lg bg-body-white px-3 pt-4">
+    <nav class="navbar container navbar-expand-lg bg-body-white px-3 pt-3">
         <img src="Images/image 17 (1).png" alt="">
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
             aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -148,7 +148,7 @@
                     <h6>Subscribe to our NEWSLETTER</h6>
                     <p>Get the latest news, articles, and resources in your inbox weekly.</p>
                 </div>
-                <div class="col-sm-10 col-md-6 col-lg-6 pt-3">
+                <div class="col-sm-10 col-md-12 col-lg-6 pt-3">
                     <input type="email" name="" id="" class="w-75 bg-white border border-none"
                         placeholder="Email address">
                     <button class="bg-white border border-none px-3 mt-2" style="color: #6d1830;">Subscribe</button>
@@ -158,7 +158,7 @@
     </section>
 
     <!-- Footer of First Section In Blog Page -->
-    <footer class="container px-5">
+    <footer class="container">
         <div class="row pt-5">
             <div class="col-sm-12 col-md-6 col-lg-8 pt-2">
                 <img src="Images/image 17 (1).png" class="Img17" alt="">
@@ -167,16 +167,16 @@
                         class="Aboutbdc">Download</a> <a href="" class="Aboutbdc">Contact</a>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-3">
-                <img src="Images/Download.png" class="w-75 googlePlay" alt="">
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <img src="Images/Download.png" class="w-50 googlePlay" alt="">
             </div>
             <hr class="mt-5">
             <div class="row pt-2 mb-3">
-                <div class="col-sm-12 col-md-6 col-lg-9 pt-2">
+                <div class="col-sm-12 col-md-6 col-lg-8 pt-2">
                     <img src="Images/Icons.png" class="w-25" alt="">
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-3 pt-2">
-                    <img src="Images/Block.png" class="w-100 Policy" alt="">
+                <div class="col-sm-12 col-md-6 col-lg-4 pt-2">
+                    <img src="Images/Block.png" class="w-75 Policy" alt="">
                 </div>
             </div>
     </footer>
