--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- Navbar Section -->
-    <nav class="navbar container navbar-expand-lg bg-body-white px-3 pt-4">
+    <nav class="navbar container navbar-expand-lg bg-body-white px-3 pt-3">
         <img src="Images/image 17 (1).png" alt="">
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
             aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -213,7 +213,7 @@
                     <h6>Subscribe to our NEWSLETTER</h6>
                     <p>Get the latest news, articles, and resources in your inbox weekly.</p>
                 </div>
-                <div class="col-sm-10 col-md-6 col-lg-6 pt-3">
+                <div class="col-sm-10 col-md-12 col-lg-6 pt-3">
                     <input type="email" name="" id="" class="w-75 bg-white border border-none"
                         placeholder="Email address">
                     <button class="bg-white border border-none px-3 mt-2" style="color: #6d1830;">Subscribe</button>
@@ -223,7 +223,7 @@
     </section>
 
     <!-- footer section -->
-    <footer class="container px-5">
+    <footer class="container">
         <div class="row pt-5">
             <div class="col-sm-12 col-md-6 col-lg-8 pt-2">
                 <img src="Images/image 17 (1).png" class="Img17" alt="">
