my project work

--- a/blog2.html
+++ b/blog2.html
@@ -111,31 +111,11 @@
                         </p>
                         <img src="Images/Author (2).png" class="w-100 pb-3 pt-3" alt="">
                     </div>
-                    <nav class="row pt-5">
-                        <nav aria-label="Page navigation example" class="col-sm-12 col-md-8 col-lg-8">
-                            <ul class="pagination gap-sm-2 gap-lg-4">
-                                <li class="page-item">
-                                    <a class="pgLink" href="#" aria-label="Previous">
-                                        <span aria-hidden="true">&laquo;</span> Previous
-                                    </a>
-                                </li>
-                                <li class="page-item"><a class="pglinkNumber" href="#">1</a></li>
-                                <li class="page-item"><a class="pglinkNumber" href="#">2</a></li>
-                                <li class="page-item"><a class="pglinkNumber" href="#">3</a></li>
-                                <li class="page-item"><a class="pglinkNumber" href="#">4</a></li>
-                                <li class="page-item"><a class="pglinkNumber" href="#">5</a></li>
-                                <li class="page-item"><a class="pglinkNumber" href="#">6</a></li>
-                                <li class="page-item"><a class="pglinkNumber" href="#">7</a></li>
-                                <li class="page-item"><a class="pglinkNumber" href="#">...</a></li>
-                                <li class="page-item"><a class="pglinkNumber" href="#">999</a></li>
-                                <li class="page-item">
-                                    <a class="pgLink" href="#" aria-label="Next">
-                                        Next <span aria-hidden="true">&raquo;</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </nav>
+                    <div class="row pt-5">
+                        <div class="col-sm-12 col-md-8 col-lg-8">
+                            <img src="Images/Pagination.png" class="img-fluid" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
     </section>
