Made some corrections on the HTML files and Stylesheet file

--- a/about.html
+++ b/about.html
@@ -79,20 +79,15 @@
     <section class="pt-5 pb-5" style="background-color: #fff9f2;">
         <div class="container ourMission">
             <div class="row px-5">
-                <div class="text-center col-sm-12 col-md-6 col-lg-6 ps-5 order-md-2 order-sm-2 order-lg-1">
-                    <img src="Images/Yes.png" class="w-75 Crossphoneall">
-                </div>
-                <div class="col-sm-8 col-md-12 col-lg-6 text-white pt-5 order-md-2 order-sm-1
-                        order-lg-1 text-md-center text-sm-center">
-                    <h4>Our Mission</h4>
-                    <p>At ViewE, our ultimate goal is to <br> help our users unlock the full <br> potential
-                        of their
-                        product
-                        through <br> innovative technology and <br> exceptional customer service.</p>
-                </div>
                 <div
-                    class="col-sm-12 col-md-12 col-lg-6 crossPhone order-md-2 order-sm-2 order-lg-1 text-md-center text-sm-center">
-
+                    class="text-lg-center text-md-center col-12 col-md-12 col-lg-6 mx-auto ps-5 order-md-2 order-2 order-lg-1">
+                    <img src="Images/Yes.png" class="crossPhone w-75 ">
+                </div>
+                <div class="col-12 col-md-8 col-lg-6 text-white pt-5 order-md-1 order-1
+                        order-lg-1 mx-auto text-lg-center tex-md-center text-center">
+                    <h4>Our Mission</h4>
+                    <p>At ViewE, our ultimate goal is to help our users unlock the full potential
+                        of their product through innovative technology and exceptional customer service.</p>
                 </div>
             </div>
         </div>
@@ -254,8 +249,9 @@
             <div class="col-sm-12 col-md-6 col-lg-8 pt-2">
                 <img src="Images/image 17 (1).png" class="Img17" alt="">
                 <div class="col-sm-12 col-md-12 col-lg-8 pt-3 mb-2">
-                    <a href="" class="Aboutbdc">About</a> <a href="" class="Aboutbdc">Blog</a> <a href=""
-                        class="Aboutbdc">Download</a> <a href="" class="Aboutbdc">Contact</a>
+                    <a href="about.html" class="Aboutbdc">About</a> <a href="blog.html" class="Aboutbdc">Blog</a> <a
+                        href="download.html" class="Aboutbdc">Download</a> <a href="contact.html"
+                        class="Aboutbdc">Contact</a>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
@@ -271,6 +267,7 @@
                 </div>
             </div>
     </footer>
+
     <script src="bootstrap-5.3.2-dist/js/bootstrap.js"></script>
 </body>
 
