--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,7 @@
         </div>
         <div class="row pt-3 pb-3 border border-2 rounded">
             <div class="col-sm-12 col-md-6 col-lg-6">
-                <a href="blog3.html" data-toggle="tooltip" title="Link To Blog3.html Page!" class="link text-black">
+                <a href="blog2.html" data-toggle="tooltip" title="Link To Blog2.html Page!" class="link text-black">
                     <h1>3D and Real Estate</h1>
                 </a>
                 <img src="Images/Authoramara.png" class="w-100 ps-3 pt-3" alt="">
@@ -69,7 +69,9 @@
                     faucibs arcu.
                     Mauris <br> blandit egestas nibh. Quis neque, eu et ipsum amet, vel <br> et. Varius integer enim
                     pellentesque ornare pharetra <br> faucibs arcu. Mauris blandit egestas nibh.</p>
-                <img src="Images/Buttonsread.png" class="w-25 ps-3" alt="">
+                <a href="blog2.html" style="text-decoration: none;">
+                    <h4 class="buttonRead">Read More ---></h4>
+                </a>
             </div>
 
             <div class="col-sm-12 col-md-6 col-lg-6 pt-3">
@@ -83,7 +85,7 @@
         <hr class="mt-4">
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-6 pt-4">
-                <a href="blog2.html" data-toggle="tooltip" title="Link To Blog2.html Page!" class="link text-black">
+                <a href="blog3.html" data-toggle="tooltip" title="Link To Blog3.html Page!" class="link text-black">
                     <h1 style="color: #6d1830;">Latest Articles</h1>
                 </a>
             </div>
@@ -119,9 +121,9 @@
                                     <span aria-hidden="true">&laquo;</span> Previous
                                 </a>
                             </li>
-                            <li class="page-item"><a class="pglinkNumber" href="#">1</a></li>
-                            <li class="page-item"><a class="pglinkNumber" href="#">2</a></li>
-                            <li class="page-item"><a class="pglinkNumber" href="#">3</a></li>
+                            <li class="page-item"><a class="pglinkNumber" href="blog.html">1</a></li>
+                            <li class="page-item"><a class="pglinkNumber" href="blog2.html">2</a></li>
+                            <li class="page-item"><a class="pglinkNumber" href="blog3.html">3</a></li>
                             <li class="page-item"><a class="pglinkNumber" href="#">4</a></li>
                             <li class="page-item"><a class="pglinkNumber" href="#">5</a></li>
                             <li class="page-item"><a class="pglinkNumber" href="#">6</a></li>
@@ -163,8 +165,9 @@
             <div class="col-sm-12 col-md-6 col-lg-8 pt-2">
                 <img src="Images/image 17 (1).png" class="Img17" alt="">
                 <div class="col-sm-12 col-md-12 col-lg-8 pt-3 mb-2">
-                    <a href="" class="Aboutbdc">About</a> <a href="" class="Aboutbdc">Blog</a> <a href=""
-                        class="Aboutbdc">Download</a> <a href="" class="Aboutbdc">Contact</a>
+                    <a href="about.html" class="Aboutbdc">About</a> <a href="blog.html" class="Aboutbdc">Blog</a> <a
+                        href="download.html" class="Aboutbdc">Download</a> <a href="contact.html"
+                        class="Aboutbdc">Contact</a>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
