--- a/blog3.html
+++ b/blog3.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <!-- Second Section on Blog page -->
+    <!-- Navbar of Second section for Blog Page -->
     <nav class="navbar container navbar-expand-lg bg-body-white px-3 pt-3">
         <img src="Images/image 17 (1).png" alt="">
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
@@ -42,7 +42,7 @@
     <section class="hero mt-2" style="background-color: #14394c;">
         <div class="container">
             <div class="row pt-5">
-                <div class="col-sm-12 col-md-6 col-lg-10 pt-4 text-white">
+                <div class="col-sm-12 col-md-6 col-lg-10  pt-4 text-white">
                     <h4>Blog</h4>
                     <p>Our little hub of articles and resources</p>
                 </div>
@@ -53,121 +53,74 @@
         </div>
         </div>
     </section>
-    </header>
 
-    <!-- 3D and Real Estate, Images and Articles Section -->
+    <!-- Author and Tweets Section in Second Section -->
     <section class="container">
-        <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-6 pt-5">
-                <p>Oct 19, 2023 • 5min read </p>
-                <h3>3D and Real Estate</h3>
-                <img src="Images/Blog-Card.png" class="blog-card pt-4" alt="">
-                <p class="pt-4 blog-card">Consequat rhoncus maecenas dictum at tristique rhoncus nec. Pellentesque
-                    bibendum quam
-                    ac, nibh dui
-                    facilisis ut viverra neque. Augue habitant blandit scelerisque vitae eu lorem vestibulum. Adipiscing
-                    ipsum, diam at non malesuada. Ut tristique ac ultrices consectetur nec massa praesent maecenas
-                    tempor. Massa viverra nunc, sed in adipiscing pellentesque et odio. Dignissim sit amet, id nunc.
-                    Purus risus nisl, egestas mi mauris. Arcu aliquam praesent tincidunt gravida ac, euismod sed
-                    rhoncus.</p>
-                <ol>
-                    <li>Nec, ac ultrices dictum in et suspendisse id netus blandit</li>
-                    <li>Quis tincidunt elit potenti justo, proin ornare nisi, egestas quis sapien</li>
-                    <li>Dui nisi fames pharetra, congue iaculis quam enim, pharetra at velit</li>
-                    <li>Nec, vulputate enim morbi non aliquam, donec eu sociis velit enim</li>
-                </ol>
-                <h5 class="pt-2 blog-card">WHAT ARE THE RIGHT INGREDIENTS TO PREPARE A DELICIOUS GLUTEN-FREE SUSHI?</h5>
-                <p class="pt-2 blog-card">Augue habitant blandit scelerisque vitae eu lorem vestibulum. Adipiscing
-                    ipsum, diam at non malesuada. Ut tristique ac ultrices consectetur nec massa praesent maecenas
-                    tempor. Massa viverra nunc, sed in adipiscing pellentesque et odio. Dignissim sit amet, id nunc.
-                    Purus risus nisl, egestas mi mauris. Arcu aliquam praesent tincidunt gravida ac, euismod sed
-                    rhoncus. <br>Eget a ac a volutpat nibh sit libero enim. Tellus bibendum metus, non quam massa
-                    integer.Ullamcorper eleifend mauris ultrices amet egestas porta id vitae habitant. At diam natoque
-                    nisi, dui amet. Commodo ac bibendum sed cursus arcu. Quam velit sed nec nulla amet tristique mauris
-                    duis ac. Augue eget imperdiet elit neque nisi hendrerit fermentum.</p>
-                <h5 class="pt-2 blog-card">WHAT’S THE ART BEHIND PREPARING A DELICIOUSGLUTEN-FREE SUSHI?</h5>
-                <p class="pt-2 blog-card">Altrices tincidunt egestas aliquam varius cras cursus auctor lerisque nulla
-                    tristique
-                    diam leo. Libero nislmus varius in at hendrerit hendrerit. Augue eget imperdiet elit neque nisi
-                    hendrerit fermentum posuere viverra. Urna, amet, pellentesque nulla a.</p>
-                <ul class="blog-card">
-                    <li>Ut a et non eget enim elementum quiset tincidunt</li>
-                    <li>Viverra sed iaculis nullam enim consectetur nulla etsem sagittis integer</li>
-                    <li>Non ut ultricies in neque diam posuere proin lectus sit fermentum</li>
-                    <li>Pretium phasellus pharetra elementum, faucibus eget tellus faucibus sit eget</li>
-                </ul>
-                <h5 class="pt-2 blog-card">DO YOU NEED ANY COOKING GADGETS TO PREPARE THE RIGHT SUSHI?</h5>
-                <p class="pt-2 blog-card">Augue habitant blandit scelerisque vitae eu lorem vestibulum. Adipiscing
-                    ipsum, diam at non
-                    malesuada. Ut tristique ac ultrices consectetur nec massa praesent maecenas tempor. Massa viverra
-                    nunc, sed in adipiscing pellentesque et odio. Dignissim sit amet, id nunc. Purus risus nisl, egestas
-                    mi mauris. Arcu aliquam praesent tincidunt gravida ac, euismod sed rhoncus.</p>
+        <div class="row px-5">
+            <div class="col-sm-12 col-md-6 col-lg-3 pt-5 ps-4">
+                <h3 class="pt-2">All our articles</h3>
             </div>
-        </div>
-        </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4 col-lg-4 pt-3">
+                    <img src="Images/Image.png" class="w-100" alt="">
+                    <h5>Flying fish swiftly flew by the space station.</h5>
+                    <p>Quis neque, eu et ipsum amet, vel et. Varius integer enim pellentesque ornare pharetra faucibs
+                        arcu. Mauris blandit egestas nibh.</p>
+                    <img src="Images/Author.png" class="w-100 pb-3 pt-3" alt="">
+                </div>
+                <div class="col-sm-12 col-md-4 col-lg-4 pt-3">
+                    <img src="Images/unsplash_OtXADkUh3-I.png" class="w-100 pb-3" alt="">
+                    <h5>Flying fish swiftly flew by the space station.</h5>
+                    <p>Quis neque, eu et ipsum amet, vel et. Varius integer enim pellentesque ornare pharetra faucibs
+                        arcu. Mauris blandit egestas nibh.
+                    </p>
+                    <img src="Images/Author (1).png" class="w-100 pb-3 pt-3" alt="">
+                </div>
+                <div class="col-sm-12 col-md-4 col-lg-4 pt-3">
+                    <img src="Images/unsplash__HqHX3LBN18.png" class="w-100 pb-3" alt="">
+                    <h5>Flying fish swiftly flew by the space station.</h5>
+                    <p>Quis neque, eu et ipsum amet, vel et. Varius integer enim pellentesque ornare pharetra faucibs
+                        arcu. Mauris blandit egestas nibh.
+                    </p>
+                    <img src="Images/Author (2).png" class="w-100 pb-3 pt-3" alt="">
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-4 col-lg-4 pt-3">
+                        <img src="Images/Image.png" class="w-100" alt="">
+                        <h5>Flying fish swiftly flew by the space station.</h5>
+                        <p>Quis neque, eu et ipsum amet, vel et. Varius integer enim pellentesque ornare pharetra
+                            faucibs
+                            arcu. Mauris blandit egestas nibh.</p>
+                        <img src="Images/Author.png" class="w-100 pb-3 pt-3" alt="">
+                    </div>
+                    <div class="col-sm-12 col-md-4 col-lg-4 pt-3">
+                        <img src="Images/unsplash_OtXADkUh3-I.png" class="w-100 pb-3" alt="">
+                        <h5>Flying fish swiftly flew by the space station.</h5>
+                        <p>Quis neque, eu et ipsum amet, vel et. Varius integer enim pellentesque ornare pharetra
+                            faucibs
+                            arcu. Mauris blandit egestas nibh.
+                        </p>
+                        <img src="Images/Author (1).png" class="w-100 pb-3 pt-3" alt="">
+                    </div>
+                    <div class="col-sm-12 col-md-4 col-lg-4 pt-3">
+                        <img src="Images/unsplash__HqHX3LBN18.png" class="w-100 pb-3" alt="">
+                        <h5>Flying fish swiftly flew by the space station.</h5>
+                        <p>Quis neque, eu et ipsum amet, vel et. Varius integer enim pellentesque ornare pharetra
+                            faucibs
+                            arcu. Mauris blandit egestas nibh.
+                        </p>
+                        <img src="Images/Author (2).png" class="w-100 pb-3 pt-3" alt="">
+                    </div>
+                    <div class="row pt-5">
+                        <div class="col-sm-12 col-md-8 col-lg-8">
+                            <img src="Images/Pagination.png" class="img-fluid" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
     </section>
 
-    <!-- Amara Tappi image and Tweet Section -->
-    <section class="container" style="background-color: #fff9f2;">
-        <div class="row pt-3 mt-4 pe-5 px-5">
-            <div class="col-sm-12 col-md-8 col-lg-5 Avatar">
-                <img src="Images/Avatar.png" class="w-25" alt="">
-            </div>
-            <div class="col-sm-12 col-md-9 col-lg-9 amara">
-                <h4>Amara Tappi</h4>
-                <h6>Game Developer</h6>
-                <p>Massa viverra nunc, sed in adipiscing pellentesque et odio. Dignissim sit
-                    amet, id nunc. Purus risus nisl, egestas mi mauris. Arcu aliquam praesent tincidunt
-                    gravida ac, euismod sed rhoncus.</p>
-                <img src="Images/Icons.png" class="w-25 mb-4" alt="">
-            </div>
-        </div>
-    </section>
-
-    <!-- Related Articles and Image Section -->
-    <section class="container">
-        <hr class="mt-5">
-        <div class="row pt-3">
-            <div class="col-sm-12 col-md-8 col-lg-7">
-                <h3 class="ps-4">Related articles</h3>
-            </div>
-            <div class="col-sm-12 col-md-4 col-lg-4">
-                <img src="Images/Buttons.png" class="imgButtons ps-3" alt="">
-            </div>
-        </div>
-    </section>
-
-    <!-- Speakers Image and Tweets Section  -->
-    <section class="container">
-        <div class="row container">
-            <div class="col-sm-12 col-md-4 col-lg-4 pt-3">
-                <img src="Images/Image.png" class="w-100" alt="">
-                <h5>Flying fish swiftly flew by the space station.</h5>
-                <p>Quis neque, eu et ipsum amet, vel et. Varius integer enim pellentesque ornare pharetra faucibs
-                    arcu. Mauris blandit egestas nibh.</p>
-                <img src="Images/Author.png" class="w-100 pb-3 pt-3" alt="">
-            </div>
-            <div class="col-sm-12 col-md-4 col-lg-4 pt-3">
-                <img src="Images/unsplash_OtXADkUh3-I.png" class="w-100 pb-3" alt="">
-                <h5>Flying fish swiftly flew by the space station.</h5>
-                <p>Quis neque, eu et ipsum amet, vel et. Varius integer enim pellentesque ornare pharetra faucibs
-                    arcu. Mauris blandit egestas nibh.
-                </p>
-                <img src="Images/Author (1).png" class="w-100 pb-3 pt-3" alt="">
-            </div>
-            <div class="col-sm-12 col-md-4 col-lg-4 pt-3">
-                <img src="Images/unsplash__HqHX3LBN18.png" class="w-100 pb-3" alt="">
-                <h5>Flying fish swiftly flew by the space station.</h5>
-                <p>Quis neque, eu et ipsum amet, vel et. Varius integer enim pellentesque ornare pharetra faucibs
-                    arcu. Mauris blandit egestas nibh.
-                </p>
-                <img src="Images/Author (2).png" class="w-100 pb-3 pt-3" alt="">
-            </div>
-        </div>
-        </div>
-    </section>
-
-    <!-- Newsletter Section -->
+    <!-- Newsletter of Second Section  -->
     <section class="pt-5 mt-4" style="background-color: #6d1830;">
         <div class="container">
             <div class="row">
@@ -184,14 +137,15 @@
         </div>
     </section>
 
-    <!-- footer section -->
+    <!-- Footer of Second Section in Blog Page  -->
     <footer class="container">
         <div class="row pt-5">
             <div class="col-sm-12 col-md-6 col-lg-8 pt-2">
                 <img src="Images/image 17 (1).png" class="Img17" alt="">
                 <div class="col-sm-12 col-md-12 col-lg-8 pt-3 mb-2">
-                    <a href="" class="Aboutbdc">About</a> <a href="" class="Aboutbdc">Blog</a> <a href=""
-                        class="Aboutbdc">Download</a> <a href="" class="Aboutbdc">Contact</a>
+                    <a href="about.html" class="Aboutbdc">About</a> <a href="blog.html" class="Aboutbdc">Blog</a> <a
+                        href="download.html" class="Aboutbdc">Download</a> <a href="contact.html"
+                        class="Aboutbdc">Contact</a>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
@@ -207,6 +161,7 @@
                 </div>
             </div>
     </footer>
+
     <script src="bootstrap-5.3.2-dist/js/bootstrap.js"></script>
 </body>
 
