--- a/download.html
+++ b/download.html
@@ -181,8 +181,9 @@
             <div class="col-sm-12 col-md-6 col-lg-8 pt-2">
                 <img src="Images/image 17 (1).png" class="Img17" alt="">
                 <div class="col-sm-12 col-md-12 col-lg-8 pt-3 mb-2">
-                    <a href="" class="Aboutbdc">About</a> <a href="" class="Aboutbdc">Blog</a> <a href=""
-                        class="Aboutbdc">Download</a> <a href="" class="Aboutbdc">Contact</a>
+                    <a href="about.html" class="Aboutbdc">About</a> <a href="blog.html" class="Aboutbdc">Blog</a> <a
+                        href="download.html" class="Aboutbdc">Download</a> <a href="contact.html"
+                        class="Aboutbdc">Contact</a>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
