--- a/index.html
+++ b/index.html
@@ -112,19 +112,16 @@
     <!-- Image And Introducing NeRF Section -->
     <main class="pt-5" style="background-color: #fff9f2;">
         <section class="container rectangle pt-5" style="background-color: #14394c;">
-            <div class="row px-5">
-                <div class="col-sm-4 col-md-4 col-lg-4 order-md-2 order-sm-2 order-lg-1">
+            <div class="row text-center px-5">
+                <div class="col-12 col-md-7 col-lg-4 order-md-2 order-2 order-lg-1 mx-auto">
                     <img src="Images/Yes.png" class="yesImage w-100" alt="">
                 </div>
-                <div
-                    class="col-sm-8 col-md-8 col-lg-8 ps-5 order-md-1 order-sm-1 order-lg-2 text-center text-md-center text-white">
+                <div class="col-12 col-md-8 col-lg-8 order-md-1 order-1 order-lg-2 mx-auto text-white">
                     <h4>Introducing NeRF</h4>
                     <p>Capture and create 3D <br> representations of objects with <br> ease.</p>
                     <button class="border border-none p-2 px-3">Download now</button>
                 </div>
-                <div class="col-sm-8 col-md-10 col-lg-4 order-md-2 order-sm-2 order-lg-1 Yes2">
 
-                </div>
             </div>
         </section>
     </main>
@@ -295,8 +292,9 @@
             <div class="col-sm-12 col-md-6 col-lg-8 pt-2">
                 <img src="Images/image 17 (1).png" class="Img17" alt="">
                 <div class="col-sm-12 col-md-12 col-lg-8 pt-2">
-                    <a href="" class="Aboutbdc">About</a> <a href="" class="Aboutbdc">Blog</a> <a href=""
-                        class="Aboutbdc">Download</a> <a href="" class="Aboutbdc">Contact</a>
+                    <a href="about.html" class="Aboutbdc">About</a> <a href="blog.html" class="Aboutbdc">Blog</a> <a
+                        href="download.html" class="Aboutbdc">Download</a> <a href="contact.html"
+                        class="Aboutbdc">Contact</a>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
@@ -312,6 +310,7 @@
                 </div>
             </div>
     </footer>
+
     <script src="bootstrap-5.3.2-dist/js/bootstrap.js"></script>
 </body>
 
