--- a/contact.html
+++ b/contact.html
@@ -59,17 +59,17 @@
             <div class="col-sm-12 col-md-6 col-lg-6">
                 <img src="Images/Imagepx.png" class="w-75 Imagepx" alt="">
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-3 pt-5 mt-5">
+            <div class="col-sm-12 col-md-12 col-lg-3 pt-lg-5 mt-5">
                 <h6>Full name</h6>
-                <input type="text" placeholder="Enter your full name" class="px-5 ps-3">
+                <input type="text" placeholder="Enter your full name" class="px-2 ps-3">
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-3 pt-5 mt-5">
+            <div class="col-sm-12 col-md-12 col-lg-3 pt-lg-5 mt-lg-5">
                 <h6>Email address</h6>
-                <input type="text" placeholder="Enter your email address" class="px-5 ps-3">
-                <div class="col-sm-12 col-md-12 col-lg-3 pt-4 inputMesg">
+                <input type="email" placeholder="Enter your email address" class="px-5 ps-3">
+                <div class="col-sm-12 col-md-12 col-lg-12 pt-4 inputMesg">
                     <h6>Message</h6>
-                    <input type="text" placeholder="Enter your message here. We can’t wait to hear from you."
-                        class="inputText">
+                    <textarea class="form-control-sm inputText" id="exampleFormControlTextarea1"
+                        placeholder="Enter Your Message Here"></textarea>
                     <div class="col-sm-12 col-md-3 col-lg-3 pt-4">
                         <button class="Imgbtn p-1 px-3">Submit</button>
                     </div>
@@ -228,8 +228,9 @@
             <div class="col-sm-12 col-md-6 col-lg-8 pt-2">
                 <img src="Images/image 17 (1).png" class="Img17" alt="">
                 <div class="col-sm-12 col-md-12 col-lg-8 pt-3 mb-2">
-                    <a href="" class="Aboutbdc">About</a> <a href="" class="Aboutbdc">Blog</a> <a href=""
-                        class="Aboutbdc">Download</a> <a href="" class="Aboutbdc">Contact</a>
+                    <a href="about.html" class="Aboutbdc">About</a> <a href="blog.html" class="Aboutbdc">Blog</a> <a
+                        href="download.html" class="Aboutbdc">Download</a> <a href="contact.html"
+                        class="Aboutbdc">Contact</a>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
@@ -245,6 +246,7 @@
                 </div>
             </div>
     </footer>
+
     <script src="bootstrap-5.3.2-dist/js/bootstrap.js"></script>
 </body>
 
